--- a/tornado_data_eda.qmd
+++ b/tornado_data_eda.qmd
@@ -19,11 +19,14 @@ theme_set(theme_minimal(base_size = 12))
 
 ## The Data
 
-We obtained the raw data from [here](https://www.spc.noaa.gov/wcm/data/1950-2022_actual_tornadoes.csv). It contains observations about tornado events from 1950 - 2022. The data is downloaded and cleaned in the R script `get_tornados_data.R`. The cleaned data is saved in the data folder as `tornados.csv`.
+We obtained the raw data from [here](https://www.spc.noaa.gov/wcm/data/1950-2022_actual_tornadoes.csv). It contains observations about tornado events from 1950 - 2022. The data is downloaded and cleaned in the R script `get_tornados_data.R`. The cleaned data is saved in the `data` folder as `tornados.csv`.
 
 Let's load the data:
 
 ```{r}
+#| message: false
+
+
 tornados <- read_csv("data/tornados.csv")
 ```
 
@@ -38,7 +41,7 @@ This data contains 68,693 rows and 27 columns (variables).
 
 ## Exploratory Data Analysis
 
-Initial examinantion of entire data
+Initial examination of entire data
 
 ```{r}
 skimr::skim(tornados)
